[gd_scene load_steps=9 format=4 uid="uid://du7yhjo6ojtml"]

[ext_resource type="Script" path="res://example/world/world.gd" id="1_rakl5"]
[ext_resource type="Texture2D" uid="uid://tvu1ny4rsdew" path="res://assets/world.png" id="2_f7hgp"]
[ext_resource type="PackedScene" uid="uid://u3wgjkiwp3n2" path="res://example/player/player.tscn" id="3_kmrbw"]
[ext_resource type="Script" path="res://encounter_system/EncounterManager.gd" id="4_wa2nn"]
[ext_resource type="Script" path="res://encounter_system/encounter_pool.gd" id="5_xr33q"]
[ext_resource type="Resource" uid="uid://c7noyobn3fq4m" path="res://example/world/encounter pools/world1.tres" id="6_3rg3y"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_favg0"]
texture = ExtResource("2_f7hgp")
texture_region_size = Vector2i(64, 64)
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/custom_data_0 = &"sand"
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 1
4:1/0/custom_data_0 = &"grass"

[sub_resource type="TileSet" id="TileSet_sf12k"]
tile_size = Vector2i(64, 64)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
terrain_set_0/terrain_1/name = "Terrain 1"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
custom_data_layer_0/name = "area_type"
custom_data_layer_0/type = 21
sources/0 = SubResource("TileSetAtlasSource_favg0")

[node name="Overworld" type="Node2D"]
script = ExtResource("1_rakl5")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAJAAkAAAAEAAEAAAAJAAgAAAABAAEAAAAJAAcAAAAEAAEAAAAJAAYAAAAEAAEAAAAJAAUAAAAEAAEAAAAJAAQAAAAEAAEAAAAJAAMAAAAEAAEAAAAJAAIAAAAEAAEAAAAJAAEAAAAEAAEAAAAJAAAAAAAEAAEAAAAIAAkAAAAEAAEAAAAIAAgAAAAEAAEAAAAIAAcAAAAEAAEAAAAIAAYAAAABAAEAAAAIAAUAAAABAAEAAAAIAAQAAAAEAAEAAAAIAAMAAAAEAAEAAAAIAAIAAAABAAEAAAAIAAEAAAAEAAEAAAAIAAAAAAAEAAEAAAAHAAkAAAABAAEAAAAHAAgAAAAEAAEAAAAHAAcAAAABAAEAAAAHAAYAAAAEAAEAAAAHAAUAAAABAAEAAAAHAAQAAAABAAEAAAAHAAMAAAABAAEAAAAHAAIAAAAEAAEAAAAHAAEAAAABAAEAAAAHAAAAAAABAAEAAAAGAAkAAAABAAEAAAAGAAgAAAABAAEAAAAGAAcAAAABAAEAAAAGAAYAAAABAAEAAAAGAAUAAAABAAEAAAAGAAQAAAABAAEAAAAGAAMAAAABAAEAAAAGAAIAAAABAAEAAAAGAAEAAAABAAEAAAAGAAAAAAABAAEAAAAFAAkAAAABAAEAAAAFAAgAAAABAAEAAAAFAAcAAAABAAEAAAAFAAYAAAABAAEAAAAFAAUAAAABAAEAAAAFAAQAAAABAAEAAAAFAAMAAAABAAEAAAAFAAIAAAABAAEAAAAFAAEAAAABAAEAAAAFAAAAAAABAAEAAAAEAAkAAAABAAEAAAAEAAgAAAABAAEAAAAEAAcAAAABAAEAAAAEAAYAAAABAAEAAAAEAAUAAAABAAEAAAAEAAQAAAABAAEAAAAEAAMAAAABAAEAAAAEAAIAAAABAAEAAAAEAAEAAAABAAEAAAAEAAAAAAABAAEAAAADAAkAAAABAAEAAAADAAgAAAABAAEAAAADAAcAAAABAAEAAAADAAYAAAABAAEAAAADAAUAAAABAAEAAAADAAQAAAABAAEAAAADAAMAAAABAAEAAAADAAIAAAABAAEAAAADAAEAAAABAAEAAAADAAAAAAABAAEAAAACAAkAAAABAAEAAAACAAgAAAABAAEAAAACAAcAAAABAAEAAAACAAYAAAABAAEAAAACAAUAAAABAAEAAAACAAQAAAABAAEAAAACAAMAAAABAAEAAAACAAIAAAABAAEAAAACAAEAAAABAAEAAAACAAAAAAABAAEAAAABAAkAAAABAAEAAAABAAgAAAABAAEAAAABAAcAAAABAAEAAAABAAYAAAABAAEAAAABAAUAAAABAAEAAAABAAQAAAABAAEAAAABAAMAAAABAAEAAAABAAIAAAABAAEAAAABAAEAAAABAAEAAAABAAAAAAABAAEAAAAAAAkAAAABAAEAAAAAAAgAAAABAAEAAAAAAAcAAAABAAEAAAAAAAYAAAABAAEAAAAAAAUAAAABAAEAAAAAAAQAAAABAAEAAAAAAAMAAAABAAEAAAAAAAIAAAABAAEAAAAAAAEAAAABAAEAAAAAAAAAAAABAAEAAAARAAkAAAAEAAEAAAARAAgAAAAEAAEAAAARAAcAAAAEAAEAAAARAAYAAAAEAAEAAAARAAUAAAAEAAEAAAARAAQAAAAEAAEAAAARAAMAAAAEAAEAAAARAAIAAAAEAAEAAAARAAEAAAAEAAEAAAARAAAAAAAEAAEAAAAQAAkAAAAEAAEAAAAQAAgAAAAEAAEAAAAQAAcAAAAEAAEAAAAQAAYAAAAEAAEAAAAQAAUAAAAEAAEAAAAQAAQAAAAEAAEAAAAQAAMAAAAEAAEAAAAQAAIAAAAEAAEAAAAQAAEAAAAEAAEAAAAQAAAAAAAEAAEAAAAPAAkAAAAEAAEAAAAPAAgAAAAEAAEAAAAPAAcAAAAEAAEAAAAPAAYAAAAEAAEAAAAPAAUAAAAEAAEAAAAPAAQAAAAEAAEAAAAPAAMAAAAEAAEAAAAPAAIAAAAEAAEAAAAPAAEAAAAEAAEAAAAPAAAAAAAEAAEAAAAOAAkAAAAEAAEAAAAOAAgAAAAEAAEAAAAOAAcAAAAEAAEAAAAOAAYAAAAEAAEAAAAOAAUAAAAEAAEAAAAOAAQAAAAEAAEAAAAOAAMAAAAEAAEAAAAOAAIAAAAEAAEAAAAOAAEAAAAEAAEAAAAOAAAAAAAEAAEAAAANAAkAAAAEAAEAAAANAAgAAAAEAAEAAAANAAcAAAAEAAEAAAANAAYAAAAEAAEAAAANAAUAAAAEAAEAAAANAAQAAAAEAAEAAAANAAMAAAAEAAEAAAANAAIAAAAEAAEAAAANAAEAAAAEAAEAAAANAAAAAAAEAAEAAAAMAAkAAAAEAAEAAAAMAAgAAAAEAAEAAAAMAAcAAAAEAAEAAAAMAAYAAAAEAAEAAAAMAAUAAAAEAAEAAAAMAAQAAAAEAAEAAAAMAAMAAAAEAAEAAAAMAAIAAAAEAAEAAAAMAAEAAAAEAAEAAAAMAAAAAAAEAAEAAAALAAkAAAAEAAEAAAALAAgAAAAEAAEAAAALAAcAAAAEAAEAAAALAAYAAAAEAAEAAAALAAUAAAAEAAEAAAALAAQAAAAEAAEAAAALAAMAAAAEAAEAAAALAAIAAAAEAAEAAAALAAEAAAAEAAEAAAALAAAAAAAEAAEAAAAKAAkAAAAEAAEAAAAKAAgAAAAEAAEAAAAKAAcAAAAEAAEAAAAKAAYAAAAEAAEAAAAKAAUAAAAEAAEAAAAKAAQAAAAEAAEAAAAKAAMAAAAEAAEAAAAKAAIAAAAEAAEAAAAKAAEAAAAEAAEAAAAKAAAAAAAEAAEAAAAAAP//AAABAAEAAAABAP//AAABAAEAAAACAP//AAABAAEAAAADAP//AAABAAEAAAADAP7/AAABAAEAAAAEAP7/AAABAAEAAAAFAP7/AAABAAEAAAAGAP7/AAABAAEAAAAHAP7/AAABAAEAAAAIAP7/AAAEAAEAAAAIAP//AAAEAAEAAAAHAP//AAAEAAEAAAAGAP//AAABAAEAAAAFAP//AAABAAEAAAAEAP//AAABAAEAAAACAP7/AAABAAEAAAABAP7/AAABAAEAAAAAAP7/AAABAAEAAAD///7/AAABAAEAAAD/////AAABAAEAAAD//wAAAAABAAEAAAD//wEAAAABAAEAAAD//wIAAAABAAEAAAD//wMAAAABAAEAAAD//wQAAAABAAEAAAD//wUAAAABAAEAAAD//wYAAAABAAEAAAD//wcAAAABAAEAAAD//wgAAAABAAEAAAD//wkAAAABAAEAAAD//woAAAABAAEAAAAAAAoAAAABAAEAAAABAAoAAAABAAEAAAACAAoAAAABAAEAAAADAAoAAAABAAEAAAAEAAoAAAABAAEAAAAFAAoAAAABAAEAAAAGAAoAAAABAAEAAAAHAAoAAAABAAEAAAAIAAoAAAABAAEAAAAHAAsAAAABAAEAAAAGAAsAAAABAAEAAAAFAAsAAAABAAEAAAAEAAsAAAABAAEAAAADAAsAAAABAAEAAAACAAsAAAABAAEAAAABAAsAAAABAAEAAAAAAAsAAAABAAEAAAD//wsAAAABAAEAAAAIAAsAAAAEAAEAAAASAAsAAAAEAAEAAAASAAoAAAAEAAEAAAASAAkAAAAEAAEAAAASAAgAAAAEAAEAAAASAAcAAAAEAAEAAAASAAYAAAAEAAEAAAASAAUAAAAEAAEAAAASAAQAAAAEAAEAAAASAAMAAAAEAAEAAAASAAIAAAAEAAEAAAASAAEAAAAEAAEAAAASAAAAAAAEAAEAAAASAP//AAAEAAEAAAASAP7/AAAEAAEAAAARAAsAAAAEAAEAAAARAAoAAAAEAAEAAAARAP//AAAEAAEAAAARAP7/AAAEAAEAAAAQAAsAAAAEAAEAAAAQAAoAAAAEAAEAAAAQAP//AAAEAAEAAAAQAP7/AAAEAAEAAAAPAAsAAAAEAAEAAAAPAAoAAAAEAAEAAAAPAP//AAAEAAEAAAAPAP7/AAAEAAEAAAAOAAsAAAAEAAEAAAAOAAoAAAAEAAEAAAAOAP//AAAEAAEAAAAOAP7/AAAEAAEAAAANAAsAAAAEAAEAAAANAAoAAAAEAAEAAAANAP//AAAEAAEAAAANAP7/AAAEAAEAAAAMAAsAAAAEAAEAAAAMAAoAAAAEAAEAAAAMAP//AAAEAAEAAAAMAP7/AAAEAAEAAAALAAsAAAAEAAEAAAALAAoAAAAEAAEAAAALAP//AAAEAAEAAAALAP7/AAAEAAEAAAAKAAsAAAAEAAEAAAAKAAoAAAAEAAEAAAAKAP//AAAEAAEAAAAKAP7/AAAEAAEAAAAJAAsAAAAEAAEAAAAJAAoAAAAEAAEAAAAJAP//AAABAAEAAAAJAP7/AAAEAAEAAAA=")
tile_set = SubResource("TileSet_sf12k")

[node name="Player" parent="." instance=ExtResource("3_kmrbw")]

[node name="EncounterManager" type="Node" parent="."]
script = ExtResource("4_wa2nn")
encounter_pools = Array[ExtResource("5_xr33q")]([ExtResource("6_3rg3y")])
max_enemies = 2
encounter_steps = 5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EncounterIn" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24

[node name="PlayerWindows" type="HBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="moved" from="Player" to="." method="_on_player_moved"]
